@@ -52,14 +52,6 @@
 #define MON_BUSY	1 << 2  /* Too busy to be monitored by the kernel */
 #define MON_WRONG_TYPE	1 << 3  /* Expecting a directory and got a file */
 
-typedef struct {
-    struct stat sbuf;		/* The stat() informations in last check */
-    char *path;			/* The file path */
-    int flags;			/* A combination of MON_xxx flags */
-    time_t lasttime;		/* Epoch of last time checking was done */
-    int checks;			/* the number of checks in that Epoch */
-} GamPollData;
-
 static GamTree *tree = NULL;
 static GList *new_subs = NULL;
 static GList *missing_resources = NULL;
@@ -191,7 +183,7 @@ node_add_subscription(GamNode * node, GamSubscription * sub)
 
     if (gam_exclude_check(node->path)) {
 	GAM_DEBUG(DEBUG_INFO, "  gam_exclude_check: true\n");
-	if (gam_node_get_data(node) == NULL)
+	if (node->lasttime == 0)
 	    poll_file(node);
 	    
 	gam_poll_add_missing(node);
@@ -220,7 +212,6 @@ static int
 node_remove_subscription(GamNode * node, GamSubscription * sub)
 {
     const char *path;
-    GamPollData *data;
 
     if ((node == NULL) || (sub == NULL))
         return(-1);
@@ -231,10 +222,9 @@ node_remove_subscription(GamNode * node, GamSubscription * sub)
     GAM_DEBUG(DEBUG_INFO, "node_remove_subscription(%s)\n", node->path);
 
     gam_node_remove_subscription(node, sub);
-    data = gam_node_get_data(node);
 
-    path = gam_node_get_path(node);
-    if (((data != NULL) && (data->flags != 0)) ||
+    path = node->path;
+    if ((node->pflags != 0) ||
         (gam_exclude_check(path))) {
 	GAM_DEBUG(DEBUG_INFO, "  gam_exclude_check: true\n");
         return(0);
@@ -268,7 +258,6 @@ node_remove_subscription(GamNode * node, GamSubscription * sub)
  * Creates a new data block for that path
  *
  * Returns the pointer to the block or NULL in case of failure
- */
 
 static GamPollData *
 gam_poll_data_new(const char *path)
@@ -283,7 +272,7 @@ gam_poll_data_new(const char *path)
     memset(data, 0, sizeof(GamPollData));
     data->path = g_strdup(path);
 
-    data->flags = 0;
+    data->pflags = 0;
     if (current_time == 0)
         current_time = time(NULL);
     data->lasttime = current_time;
@@ -295,13 +284,13 @@ gam_poll_data_new(const char *path)
 
     return data;
 }
+ */
 
 /**
  * gam_poll_data_destroy:
  * @data: pointer to the data block
  *
  * Destroys a data block.
- */
 
 static void
 gam_poll_data_destroy(GamPollData * data)
@@ -312,6 +301,7 @@ gam_poll_data_destroy(GamPollData * data)
 	g_free(data);
     }
 }
+ */
 
 static void
 gam_poll_emit_event(GamNode * node, GaminEventType event)
@@ -446,7 +436,6 @@ gam_poll_flowoff_node(GamNode * node) {
 static GaminEventType
 poll_file(GamNode * node)
 {
-    GamPollData *data;
     GaminEventType event;
     struct stat sbuf;
     int stat_ret;
@@ -455,25 +444,17 @@ poll_file(GamNode * node)
     path = gam_node_get_path(node);
     GAM_DEBUG(DEBUG_INFO, "Poll: poll_file for %s called\n", path);
 
-    data = gam_node_get_data(node);
-    if (data == NULL) {
-        char real[PATH_MAX];
-
-        GAM_DEBUG(DEBUG_INFO, "Poll: poll_file : new\n");
-        realpath(path, real);
-        data = gam_poll_data_new(real);
-
-        gam_node_set_data(node, data,
-                          (GDestroyNotify) gam_poll_data_destroy);
-
-        stat_ret = stat(data->path, &sbuf);
+    if (node->lasttime == 0) {
+	GAM_DEBUG(DEBUG_INFO, "Poll: file is new\n");
+        stat_ret = stat(node->path, &sbuf);
 	if (stat_ret != 0)
-	    data->flags |= MON_MISSING;
+	    node->pflags |= MON_MISSING;
 	else
 	    gam_node_set_is_dir(node, (S_ISDIR(sbuf.st_mode) != 0));
 	if (gam_exclude_check(path))
-	    data->flags |= MON_NOKERNEL;
-        memcpy(&(data->sbuf), &(sbuf), sizeof(sbuf));
+	    node->pflags |= MON_NOKERNEL;
+        memcpy(&(node->sbuf), &(sbuf), sizeof(sbuf));
+	node->lasttime = current_time;
 
         if (stat_ret == 0)
             return 0;
@@ -481,15 +462,15 @@ poll_file(GamNode * node)
             return GAMIN_EVENT_DELETED;
     }
     GAM_DEBUG(DEBUG_INFO, " at %d delta %d : %d\n", current_time,
-              current_time - data->lasttime, data->checks);
+              current_time - node->lasttime, node->checks);
 
     event = 0;
 
-    stat_ret = stat(data->path, &sbuf);
+    stat_ret = stat(node->path, &sbuf);
     if (stat_ret != 0) {
-        if ((gam_errno() == ENOENT) && (!(data->flags & MON_MISSING))) {
+        if ((gam_errno() == ENOENT) && (!(node->pflags & MON_MISSING))) {
             /* deleted */
-            data->flags = MON_MISSING;
+            node->pflags = MON_MISSING;
 
 	    gam_poll_remove_busy(node);
 	    if (gam_node_get_subscriptions(node) != NULL) {
@@ -498,28 +479,28 @@ poll_file(GamNode * node)
 	    }
             event = GAMIN_EVENT_DELETED;
         }
-    } else if (data->flags & MON_MISSING) {
+    } else if (node->pflags & MON_MISSING) {
         /* created */
-        data->flags &= ~MON_MISSING;
+        node->pflags &= ~MON_MISSING;
         event = GAMIN_EVENT_CREATED;
 #ifdef ST_MTIM_NSEC
-    } else if ((data->sbuf.st_mtim.tv_sec != sbuf.st_mtim.tv_sec) ||
-               (data->sbuf.st_mtim.tv_nsec != sbuf.st_mtim.tv_nsec) ||
-               (data->sbuf.st_size != sbuf.st_size) ||
-               (data->sbuf.st_ctim.tv_sec != sbuf.st_ctim.tv_sec) ||
-               (data->sbuf.st_ctim.tv_nsec != sbuf.st_ctim.tv_nsec)) {
+    } else if ((node->sbuf.st_mtim.tv_sec != sbuf.st_mtim.tv_sec) ||
+               (node->sbuf.st_mtim.tv_nsec != sbuf.st_mtim.tv_nsec) ||
+               (node->sbuf.st_size != sbuf.st_size) ||
+               (node->sbuf.st_ctim.tv_sec != sbuf.st_ctim.tv_sec) ||
+               (node->sbuf.st_ctim.tv_nsec != sbuf.st_ctim.tv_nsec)) {
         event = GAMIN_EVENT_CHANGED;
     } else {
 	GAM_DEBUG(DEBUG_INFO, "Poll: poll_file %s unchanged\n", path);
-	GAM_DEBUG(DEBUG_INFO, "%d %d : %d %d\n", data->sbuf.st_mtim.tv_sec,
-	          data->sbuf.st_mtim.tv_nsec, sbuf.st_mtim.tv_sec,
+	GAM_DEBUG(DEBUG_INFO, "%d %d : %d %d\n", node->sbuf.st_mtim.tv_sec,
+	          node->sbuf.st_mtim.tv_nsec, sbuf.st_mtim.tv_sec,
 		  sbuf.st_mtim.tv_nsec);
 #else
-    } else if ((data->sbuf.st_mtime != sbuf.st_mtime) ||
-               (data->sbuf.st_size != sbuf.st_size) ||
-               (data->sbuf.st_ctime != sbuf.st_ctime)) {
+    } else if ((node->sbuf.st_mtime != sbuf.st_mtime) ||
+               (node->sbuf.st_size != sbuf.st_size) ||
+               (node->sbuf.st_ctime != sbuf.st_ctime)) {
         event = GAMIN_EVENT_CHANGED;
-	GAM_DEBUG(DEBUG_INFO, "%d : %d\n", data->sbuf.st_mtime,
+	GAM_DEBUG(DEBUG_INFO, "%d : %d\n", node->sbuf.st_mtime,
 		  sbuf.st_mtime);
 #endif
     }
@@ -530,39 +511,39 @@ poll_file(GamNode * node)
      */
     if (stat_ret == 0)
 	gam_node_set_is_dir(node, (S_ISDIR(sbuf.st_mode) != 0));
-    data->sbuf = sbuf;
+    node->sbuf = sbuf;
 
     /*
      * if kernel monitoring prohibited, stop here
      */
-    if (data->flags & MON_NOKERNEL)
+    if (node->pflags & MON_NOKERNEL)
         return(event);
 
     /*
      * load control, switch back to poll on very busy resources
      * and back when no update has happened in 5 seconds
      */
-    if (current_time == data->lasttime) {
-	if (!(data->flags & MON_BUSY)) {
-	    if (data->sbuf.st_mtime == current_time)
-		data->checks++;
+    if (current_time == node->lasttime) {
+	if (!(node->pflags & MON_BUSY)) {
+	    if (node->sbuf.st_mtime == current_time)
+		node->checks++;
 	}
     } else {
-        data->lasttime = current_time;
-	if (data->flags & MON_BUSY) {
+        node->lasttime = current_time;
+	if (node->pflags & MON_BUSY) {
 	    if (event == 0)
-		data->checks++;
+		node->checks++;
 	} else {
-	    data->checks = 0;
+	    node->checks = 0;
 	}
     }
 
-    if ((data->checks >= 4) && (!(data->flags & MON_BUSY))) {
+    if ((node->checks >= 4) && (!(node->pflags & MON_BUSY))) {
 	if ((gam_node_get_subscriptions(node) != NULL) &&
-	    (!gam_exclude_check(data->path))) {
+	    (!gam_exclude_check(node->path))) {
 	    GAM_DEBUG(DEBUG_INFO, "switching %s back to polling\n", path);
-	    data->flags |= MON_BUSY;
-	    data->checks = 0;
+	    node->pflags |= MON_BUSY;
+	    node->checks = 0;
 	    gam_poll_add_busy(node);
 	    gam_poll_flowon_node(node);
 	    /*
@@ -581,13 +562,13 @@ poll_file(GamNode * node)
 	}
     }
 
-    if ((event == 0) && (data->flags & MON_BUSY) && (data->checks > 5)) {
+    if ((event == 0) && (node->pflags & MON_BUSY) && (node->checks > 5)) {
 	if ((gam_node_get_subscriptions(node) != NULL) &&
-	    (!gam_exclude_check(data->path))) {
+	    (!gam_exclude_check(node->path))) {
 	    GAM_DEBUG(DEBUG_INFO, "switching %s back to kernel monitoring\n",
 	              path);
-	    data->flags &= ~MON_BUSY;
-	    data->checks = 0;
+	    node->pflags &= ~MON_BUSY;
+	    node->checks = 0;
 	    gam_poll_remove_busy(node);
 	    gam_poll_flowoff_node(node);
 	}
@@ -681,12 +662,8 @@ scan_files:
         if (fevent != 0) {
             gam_poll_emit_event(node, fevent);
         } else {
-	    GamPollData *data;
-
             /* just send the EXIST events if the node exists */
-	    data = gam_node_get_data(node);
-
-	    if ((data) && (!(data->flags & MON_MISSING)))
+	    if (!(node->pflags & MON_MISSING))
 		gam_server_emit_event(gam_node_get_path(node),
 		                      gam_node_is_dir(node),
 				      GAMIN_EVENT_EXISTS, NULL, 0);
@@ -758,7 +735,6 @@ gam_poll_scan_callback(gpointer data) {
 
     current_time = time(NULL);
     for (idx = 0;;idx++) {
-	GamPollData *data;
 	GamNode *node;
 	
 	/*
@@ -769,13 +745,6 @@ gam_poll_scan_callback(gpointer data) {
 	if (node == NULL) {
 #ifdef VERBOSE_POLL
 	    GAM_DEBUG(DEBUG_INFO, "  node %d == NULL\n", idx);
-#endif
-	    break;
-	} 
-	data = gam_node_get_data(node);
-	if (data == NULL) {
-#ifdef VERBOSE_POLL
-	    GAM_DEBUG(DEBUG_INFO, "  data %d == NULL\n", idx);
 #endif
 	    break;
 	} 
@@ -796,7 +765,7 @@ gam_poll_scan_callback(gpointer data) {
 	 * if the resource exists again and is not in a special monitoring
 	 * mode then switch back to dnotify for monitoring.
 	 */
-	if ((data->flags == 0) && (!gam_exclude_check(data->path))) {
+	if ((node->pflags == 0) && (!gam_exclude_check(node->path))) {
 	    gam_poll_remove_missing(node);
 	    if (gam_node_get_subscriptions(node) != NULL) {
 	        gam_poll_relist_node(node);
@@ -805,7 +774,6 @@ gam_poll_scan_callback(gpointer data) {
     }
 
     for (idx = 0;;idx++) {
-	GamPollData *data;
 	GamNode *node;
 	
 	/*
@@ -819,16 +787,9 @@ gam_poll_scan_callback(gpointer data) {
 #endif
 	    break;
 	} 
-	data = gam_node_get_data(node);
-	if (data == NULL) {
-#ifdef VERBOSE_POLL
-	    GAM_DEBUG(DEBUG_INFO, "  data %d == NULL\n", idx);
-#endif
-	    break;
-	} 
 
 #ifdef VERBOSE_POLL
-	GAM_DEBUG(DEBUG_INFO, "Checking busy file %s", data->path);
+	GAM_DEBUG(DEBUG_INFO, "Checking busy file %s", node->path);
 #endif
 	if (node->is_dir) {
 	    gam_poll_scan_directory_internal(node);
@@ -843,7 +804,7 @@ gam_poll_scan_callback(gpointer data) {
 	 * if the resource exists again and is not in a special monitoring
 	 * mode then switch back to dnotify for monitoring.
 	 */
-	if ((data->flags == 0) && (!gam_exclude_check(data->path))) {
+	if ((node->pflags == 0) && (!gam_exclude_check(node->path))) {
 	    gam_poll_remove_busy(node);
 	    if (gam_node_get_subscriptions(node) != NULL) {
 		gam_poll_flowoff_node(node);
@@ -933,9 +894,9 @@ gam_poll_scan_all_callback(gpointer data) {
 		    g_free (parent);
 	    }
 
-	      if (g_list_find(all_resources, node) == NULL) {
+	    if (g_list_find(all_resources, node) == NULL) {
 		all_resources = g_list_prepend (all_resources, node);
-	      }
+	    }
     	}
 	g_list_free (subs);
     }
@@ -1203,7 +1164,7 @@ gam_poll_scan_directory(const char *path)
  */
 static void
 gam_poll_first_scan_dir(GamSubscription *sub, GamNode *dir_node,
-                        GamPollData *data, const char *dpath)
+                        const char *dpath)
 {
     GDir *dir;
     char *path;
@@ -1229,19 +1190,14 @@ gam_poll_first_scan_dir(GamSubscription *sub, GamNode *dir_node,
 	    gam_error(DEBUG_INFO, "Failed to allocate node for: %s\n", dpath);
 	    goto done;
 	}
-	data = gam_poll_data_new(dpath);
-	if (data == NULL) {
-	    gam_error(DEBUG_INFO, "Failed to allocate data for: %s\n", dpath);
-	    goto done;
-	}
+	stat(node->path, &(node->sbuf));
+	node->lasttime = current_time;
 	gam_node_add_subscription(node, sub);
-	gam_node_set_data(node, data,
-			  (GDestroyNotify) gam_poll_data_destroy);
 	if (g_file_test(dpath, G_FILE_TEST_EXISTS)) {
-	    data->flags = MON_WRONG_TYPE;
+	    node->pflags = MON_WRONG_TYPE;
 	    node->is_dir = 0;
 	} else {
-	    data->flags = MON_MISSING;
+	    node->pflags = MON_MISSING;
 	    gam_poll_add_missing(node);
 	}
 	goto done;
@@ -1268,16 +1224,11 @@ gam_poll_first_scan_dir(GamSubscription *sub, GamNode *dir_node,
             } else {
                 node = gam_node_new(path, NULL, TRUE);
             }
-	    data = gam_poll_data_new(path);
-	    if (data != NULL) {
-		gam_node_set_data(node, data,
-				  (GDestroyNotify) gam_poll_data_destroy);
-
-		stat(data->path, &(data->sbuf));
-		gam_node_set_is_dir(node, (S_ISDIR(data->sbuf.st_mode) != 0));
-		if (gam_exclude_check(path))
-		    data->flags |= MON_NOKERNEL;
-	    }
+	    stat(node->path, &(node->sbuf));
+	    gam_node_set_is_dir(node, (S_ISDIR(node->sbuf.st_mode) != 0));
+	    if (gam_exclude_check(path))
+		node->pflags |= MON_NOKERNEL;
+	    node->lasttime = current_time;
 	    gam_tree_add(tree, dir_node, node);
         }
 	if (with_exists)
@@ -1322,7 +1273,6 @@ gam_poll_consume_subscriptions(void)
         for (l = subs; l; l = l->next) {
             GamSubscription *sub = l->data;
             GamNode *node;
-            GamPollData *data;
             int node_is_dir;
 
             const char *path = gam_subscription_get_path(sub);
@@ -1341,7 +1291,7 @@ gam_poll_consume_subscriptions(void)
 
             node_is_dir = gam_node_is_dir(node);
             if (node_is_dir) {
-                gam_poll_first_scan_dir(sub, node, data, path);
+                gam_poll_first_scan_dir(sub, node, path);
             } else {
                 GaminEventType event;
 
@@ -1361,9 +1311,8 @@ gam_poll_consume_subscriptions(void)
                 gam_server_emit_one_event(path, node_is_dir,
                                           GAMIN_EVENT_ENDEXISTS, sub, 0);
             }
-            data = gam_node_get_data(node);
-            if ((data) && ((data->flags & MON_MISSING) ||
-                           (data->flags & MON_NOKERNEL))) {
+            if ((node) && ((node->pflags & MON_MISSING) ||
+                           (node->pflags & MON_NOKERNEL))) {
                 gam_poll_add_missing(node);
             }
         }
